@@ -5,7 +5,7 @@ EXTRANAME = $(MEDIUM)/
 
 MANIFEST-INITRD = "netboot initrd"
 MANIFEST-KERNEL = "kernel image to netboot"
-MANIFEST-MINIISO = "tiny bootable CD image for pure network install"
+MANIFEST-MINIISO = "tiny CD image that boots the netboot installer"
 
 # FIXME: Temporary fix, these files should be in a udeb!
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
