@@ -1,0 +1,23 @@
+#include "base"
+#include "kernel"
+
+# Include all standard priority udebs and all kernel modules matching the
+# kernel onto the miniiso. The idea is that here we have a very simple form
+# of d-i that does not need a Packages file anywhere, so it much easier to
+# build. These lists are produced during build.
+#include "standard-udebs"
+#include "kernel-module-udebs"
+
+# Other udebs that are not standard priority, but are still needed.
+busybox-cvs-udeb
+cdebconf-newt-udeb
+# Used by countrychooser
+iso-3166-udeb
+# Need to choose a mirror for debootstrap to download Debian from.
+choose-mirror
+# Network setup stuff.
+ethdetect
+netcfg
+# used by netcfg
+libiw27-udeb
+
