@@ -1,0 +1,9 @@
+console-keymaps-at
+console-keymaps-usb
+bogl-bterm-udeb
+discover1-udeb
+discover1-data-udeb
+usb-discover
+kbd-chooser
+pcmcia-cs-udeb
+dhcp-client-udeb
