@@ -7,7 +7,7 @@ kernel, which is the most common piece to need to replace, but similar
 techniques can be used to replace any other udeb used by this modular
 installer with a custom version.
 
-If you have questions about this document, main the Debian Installer team
+If you have questions about this document, mail the Debian Installer team
 at: <debian-boot@lists.debian.org>.
 
 Step 1. Kernel deb
