@@ -10,6 +10,13 @@ debian-installer (20040332) UNRELEASED; urgency=low
     - Out of space on the root floppy again. Split off a asian-root floppy.
     - Remove the pcmcia stuff from the cd-drivers floppy, it was too big.
     - Force the driver floppies to be of size FLOPPY_SIZE.
+    - Add custom-kernel.txt
+    - Add new image type, "monolithic", which build an initrd and a miniiso
+      that contain all standard priority udebs, and does not need any other
+      udebs to install Debian. This simple image type will be much easier to
+      use for custom d-i builds, as you don't need to set up a CD or a mirror.
+      It's also great for testing changes to $RANDOM_UDEB.
+    - Add build-dep on grep-dctrl, used by monolithic image build process.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 31 Mar 2004 16:43:13 -0500
 
